<resources>
    <string name="Name">Nombre de la cuenta</string>
    <string name="firstName">Primer apellido</string>
    <string name="lastName">Segundo apellido</string>
    <string name="userName">Nombre de usuario</string>
    <string name="Mail">Email</string>
    <string name="Age">Edad del usuario</string>
    <string name="Number">Numero telefonico</string>
    <string name="Gender">Con letra o sin letra?</string>
    <string name="Type">Escena mexicana o extranjera?</string>
    <string name="Listo">Antes de registrar, da click aqui cuando hayas llenado todos los campos!</string>
    <string name="Password">Contraseña del usuario</string>
    <string name="writeName">Ejemplor</string>
    <string name="writefirstName">Ejemplarez</string>
    <string name="writelastName">Ejemplorio</string>
    <string name="writeuserName">Ejemplario34</string>
    <string name="writeMail">ejemplo@gmail.com</string>
    <string name="writeAge">Estudias o trabajas?</string>
    <string name="writeNumber">No te vamos a llamar...</string>
    <string name="writeGender1">Con letra</string>
    <string name="writeGender2">Sin letra</string>
    <string name="writeType1">Mexicana</string>
    <string name="writeType2">Extranjera</string>
    <string name="writePassword">Escribir Contra</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="crearBD">Listo</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="back">Volver</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="recoverPassword">Recuperar contraseña</string>
    <string name="welcome">Bienvenue!!</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_copiar">Cerrar Sesión</string>
    <string name="list_name">Nombre de la Cuenta</string>
    <string name="list_nameHint">Escribir el Nombre</string>
    <string name="list_pass">Contraseña de la Cuenta</string>
    <string name="list_passHint">Escribir la Contraseña</string>
    <string name="list_rsHint">Escribir el nombre de la red social</string>
    <string name="list_image">Seleccione su icono plis</string>
    <string name="list_image1">Default</string>
    <string name="list_image2">Imagen 1</string>
    <string name="list_image3">Imagen 2</string>
    <string name="list_image4">Imagen 3</string>
    <string name="list_button">Enviar</string>
    <string name="usuario_registro">Nombre de usuario</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena_registro">Escriba una contraseña</string>
    <string name="correo">email</string>
    <string name="correo_registro">email</string>
    <string name="telefono">Numero de celular</string>
    <string name="registrar">Registro</string>
    <string name="regresar">Regresame!!</string>
    <string name="bienvenida_contrasena">Olvidé mi contraseña ...ups</string>
    <string name="buscar">Ok</string>
    <string name="usuario_login">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="rs">Red Social</string>
    <string name="aceptar">Login</string>
    <string name="contrasena_olv">Contraseña perdida?</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contrasena_usario">Ingresar contraseña</string>
    <string name="registrarse">Registro</string>
    <string name="welcome_back">Bienvenue!!</string>
    <string name="yo">Fuentes Jarquín Jesús Ángel</string>
    <string name="acercade">Acerca de</string>
    <string name="regresaacerca">Regresame!!</string>
    <string name="app_name">MyEtesito</string>
    <string name="list_button_back">Regresar</string>
    <string name="list_button_next">Siguiente</string>

</resources>