<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Register">

    <TextView
        android:id="@+id/textViewRName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Name"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRlastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/lastName"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRuserName" />

    <TextView
        android:id="@+id/textViewRfirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/firstName"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRName" />

    <TextView
        android:id="@+id/textViewRuserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sansita"
        android:text="@string/userName"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Mail"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRfirstName" />

    <TextView
        android:id="@+id/textViewRAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Age"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupRGender" />

    <TextView
        android:id="@+id/textViewRNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Number"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRlastName" />

    <TextView
        android:id="@+id/textViewRGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Gender"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRMail" />

    <TextView
        android:id="@+id/textViewRType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Type"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRNumber" />

    <TextView
        android:id="@+id/textViewRType2"
        android:layout_width="172dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Listo"
        android:textAlignment="center"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRAge" />

    <TextView
        android:id="@+id/textViewRPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/sansita"
        android:text="@string/Password"
        android:textColor="@color/fonts"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupRType" />

    <Button
        android:id="@+id/loginid2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sansita"
        android:onClick="Volver"
        android:text="@string/back"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toEndOf="@+id/loginid"
        app:layout_constraintTop_toBottomOf="@+id/editTextRPassword"
        app:strokeColor="@color/fonts"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/editTextRName"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writeName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRName"
        tools:textSize="12sp" />

    <EditText
        android:id="@+id/editTextRfirstName"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"

        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writefirstName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRfirstName"
        tools:textSize="12sp" />

    <EditText
        android:id="@+id/editTextRlastName"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writelastName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRlastName"
        tools:textSize="12sp" />

    <EditText
        android:id="@+id/editTextRuserName"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writeuserName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRuserName"
        tools:textSize="12sp" />

    <EditText
        android:id="@+id/editTextRMail"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writeMail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRMail"
        tools:textSize="10sp" />

    <EditText
        android:id="@+id/editTextRAge"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writeAge"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRAge"
        tools:textSize="12sp" />

    <EditText
        android:id="@+id/editTextRNumber"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writeNumber"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRNumber"
        tools:textSize="10sp" />

    <RadioGroup
        android:id="@+id/radioGroupRGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRGender">

        <RadioButton
            android:id="@+id/radioButtonRGender1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansita"
            android:text="@string/writeGender1"
            android:textColor="@color/fonts"
            tools:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonRGender2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansita"
            android:text="@string/writeGender2"
            android:textColor="@color/fonts"
            tools:textSize="12sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupRType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRType">

        <RadioButton
            android:id="@+id/radioButtonRType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansita"
            android:text="@string/writeType1"
            android:textColor="@color/fonts"
            tools:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonRType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansita"
            android:text="@string/writeType2"
            android:textColor="@color/fonts"
            tools:textSize="12sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextRPassword"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/sansita"
        android:hint="@string/writePassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRPassword"
        tools:textSize="12sp" />

    <Button
        android:id="@+id/loginid"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/sansita"
        android:onClick="Registrarse"
        android:text="@string/register"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRAge"
        app:strokeColor="@color/fonts"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/BDBoton"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@android:color/holo_purple"
        android:fontFamily="@font/sansita"
        android:onClick="CrearBD"
        android:text="@string/crearBD"
        android:textColor="@color/fonts"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRAge"
        app:strokeColor="@color/fonts"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>