<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".List.ListViewActividad"
    android:background="@drawable/fondo">

    <ListView
        android:id="@+id/listViewIdContent"
        android:layout_width="250dp"
        android:layout_height="460dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewL1" />

    <ListView
        android:id="@+id/listViewIdMap"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toStartOf="@+id/listViewLEdit"
        app:layout_constraintTop_toBottomOf="@+id/textViewL1" />

    <ListView
        android:id="@+id/listViewLEdit"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toStartOf="@+id/listViewLRemove"
        app:layout_constraintTop_toBottomOf="@+id/textViewL1" />

    <ListView
        android:id="@+id/listViewLRemove"
        android:layout_width="50dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewL1" />

    <TextView
        android:id="@+id/textViewL1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sansita"
        android:text="@string/welcome_back"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLMAnt"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000067B8"
        android:fontFamily="@font/sansita"
        android:text="@string/list_button_back"
        android:textColor="@color/fonts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewIdContent"
        app:strokeColor="@color/fonts"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/buttonLSig"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/list_button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewIdContent"
        app:strokeColor="@color/fonts"
        app:strokeWidth="2dp"
        android:backgroundTint="#000067B8"
        android:fontFamily="@font/sansita"
        android:textColor="@color/fonts" />

</androidx.constraintlayout.widget.ConstraintLayout>